--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
 <html lang=”pt-br”>
-
+<body>
+    <h1>
 <head>
 <meta charset=”UTF-8”>
 
@@ -9,14 +10,14 @@
 scale=1.0”>
 
 <title>meu portifólio</title>
-<https://pbs.twimg.com/media/Dz6u9C5UUAA-cXM.jpg=”stylesheet” href=”style.css”>
-
-<img src=”https://pbs.twimg.com/media/Dz6u9C5UUAA-cXM.jpg” alt=”aVatar do VAOBEN” srcset=””>
-<p>Sou estudante do ensino medio,gosto aprender coisas que envolvam principalmente numeros.</p>
+<link rel=”stylesheet” href=”style.css”>
+<img src=”https://pbs.twimg.com/media/Dz6u9C5UUAA-cXM.jpg” alt=”avatar do VAOBEN” srcset=””>
+<p>Sou estudante do ensino médio, gosto aprender coisas que envolvam principalmente numeros.</p>
 <div>
 
     <p>Calculos</p>
     
 </div>
-
+</h1>
+</body>
 </html>
