--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 
 <html lang=”pt-br”>
-<body>
+<body style="text-align: center; background-color: rgb(236, 222, 204);">
+    
     <h1>
 <head>
+  <p>VICTOR</p>
 <meta charset=”UTF-8”>
 
-<meta name=”viewport” content=”width=device-width, initial-
-scale=1.0”>
+<meta name=”viewport” content=”width=device-width, initial-scale=1.0”>
 
 <title>meu portifólio</title>
 <link rel=”stylesheet” href=”style.css”>
-<img src=”https://pbs.twimg.com/media/Dz6u9C5UUAA-cXM.jpg” alt=”avatar do VAOBEN” srcset=””>
-<p>Sou estudante do ensino médio, gosto aprender coisas que envolvam principalmente numeros.</p>
+<img src='/home/administrador/Área de Trabalho/sorriso_hq.jpg'>
+<p>Sou estudante do ensino médio, gosto aprender coisas que envolvam principalmente numeros, minha comida favorita é macarrão alho e óleo, não sou muito interativo, e tenho um gosto musical variado.</p>
 <div>
 
-    <p>Calculos</p>
-    
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/GqSjAF41aDU?si=XccNW6P4scSHoN7c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p>Responsividade significa a capacidade de responder a estímulos, situações ou questões de forma rápida e adequada, demonstrando atenção e compreensão</p>
 </div>
 </h1>
 </body>
