--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 
 <html lang=”pt-br”>
-<body style="text-align: center; background-color: rgb(236, 222, 204);">
+<body style="text-align: center"; background="/tmp/guest-2adrsb/Área de Trabalho/gato da lua.jpg";>
     
     <h1>
 <head>
-  <p>VICTOR</p>
+  <p style="color: rgb(255, 255, 255)">VICTOR</p>
 <meta charset=”UTF-8”>
-
-<meta name=”viewport” content=”width=device-width, initial-scale=1.0”>
 
 <title>meu portifólio</title>
 <link rel=”stylesheet” href=”style.css”>
-<img src='/home/administrador/Área de Trabalho/sorriso_hq.jpg'>
-<p>Sou estudante do ensino médio, gosto aprender coisas que envolvam principalmente numeros, minha comida favorita é macarrão alho e óleo, não sou muito interativo, e tenho um gosto musical variado.</p>
+<img src='/tmp/guest-2adrsb/Área de Trabalho/istockphoto-1314734844-612x612-1.jpg'>
+<p style="color: rgb(255, 255, 255)">Sou estudante do ensino médio, gosto aprender coisas que envolvam principalmente numeros, minha comida favorita é macarrão alho e óleo, não sou muito interativo, e tenho um gosto musical variado.</p>
 <div>
 
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/GqSjAF41aDU?si=XccNW6P4scSHoN7c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <p>Responsividade significa a capacidade de responder a estímulos, situações ou questões de forma rápida e adequada, demonstrando atenção e compreensão</p>
+    <p style="color: rgb(255, 255, 255)">Responsividade significa a capacidade de responder a estímulos, situações ou questões de forma rápida e adequada, demonstrando atenção e compreensão</p>
 </div>
 </h1>
 </body>
