--- a/sla-main/sla-main/site/index.html
+++ b/sla-main/sla-main/site/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 
 <html lang=”pt-br”>
-<body style="text-align: center"; background="/tmp/guest-2adrsb/Área de Trabalho/gato da lua.jpg";>
+<body style="text-align: center"; background="/tmp/guest-qj8vi8/Área de Trabalho/download.jpeg";>
     
     <h1>
 <head>
-  <p style="color: rgb(255, 255, 255)">VICTOR</p>
+  <p style="color: rgb(255, 217, 0)">VICTOR</p>
 <meta charset=”UTF-8”>
 
 <title>meu portifólio</title>
 <link rel=”stylesheet” href=”style.css”>
-<img src='/tmp/guest-2adrsb/Área de Trabalho/istockphoto-1314734844-612x612-1.jpg'>
+<img src='/tmp/guest-qj8vi8/Área de Trabalho/gato preto.jpg'>
 <p style="color: rgb(255, 255, 255)">Sou estudante do ensino médio, gosto aprender coisas que envolvam principalmente numeros, minha comida favorita é macarrão alho e óleo, não sou muito interativo, e tenho um gosto musical variado.</p>
 <div>
 
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/GqSjAF41aDU?si=XccNW6P4scSHoN7c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <p style="color: rgb(255, 255, 255)">Responsividade significa a capacidade de responder a estímulos, situações ou questões de forma rápida e adequada, demonstrando atenção e compreensão</p>
+    <p style="color: rgb(161, 134, 12)">OQ É JAVA SCRIPT</p>
+    <p style="color: rgb(255, 255, 255)">é uma linguagem de programação usada para tornar páginas da web interativas, como animações, botões clicáveis, menus pop-up e muito mais</p>
+
 </div>
 </h1>
 </body>
